--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
   <!-- Header -->
   <header class="header">
     <div class="logo">
-      <div class="logo-icon">DP</div>
+      <img src="assets/images/depaymprotocol.webp" alt="DePayM Logo" class="logo-img" />
       <div class="logo-text">DePayM <span>Protocol</span></div>
     </div>
     <nav>
@@ -588,7 +588,7 @@
       <p>DePayM Protocol is the foundational infrastructure enabling secure, efficient, and inclusive financial systems across the globe.</p>
       <div>
         <a href="#ecosystem" class="btn btn-primary">Explore Our Ecosystem</a>
-        <a href="https://app.depaymprotocol.com" class="btn btn-secondary">Know About De-PayM App</a>
+        <a href="https://depaymprotocol.com/de-paym/" class="btn btn-secondary">Know About De-PayM App</a>
       </div>
     </div>
     <div class="hero-image">
