--- a/de-paym/index.html
+++ b/de-paym/index.html
@@ -545,14 +545,9 @@
   <!-- Header / Navigation -->
   <header class="header">
     <div class="logo">
-      <!-- Placeholder for logo -->
-      <svg width="50" height="50" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="25" cy="25" r="20" fill="none" stroke="#63b3ed" stroke-width="3"/>
-        <path d="M15 25 L25 15 L35 25 L25 35 Z" fill="none" stroke="#63b3ed" stroke-width="2"/>
-        <circle cx="25" cy="25" r="5" fill="#63b3ed"/>
-      </svg>
-      <h1>De-PayM</h1>
-    </div>
+    <img src="assets/images/logo.png" alt="DePayM Logo" class="logo-img" />
+    <h1>De-PayM</h1>
+  </div>
     <button class="mobile-menu-btn" id="mobileMenuBtn">
       <i class="fas fa-bars"></i>
     </button>
