--- a/de-paym/contact.html
+++ b/de-paym/contact.html
@@ -558,9 +558,9 @@
 <body>
   <header class="header">
     <div class="logo">
-      <div class="logo-icon">DP</div>
-      <div class="logo-text">De-PayM</div>
-    </div>
+    <img src="assets/images/logo.png" alt="DePayM Logo" class="logo-img" />
+    <h1>De-PayM</h1>
+  </div>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
