--- a/de-paym/contact.html
+++ b/de-paym/contact.html
@@ -558,7 +558,7 @@
 <body>
   <header class="header">
     <div class="logo">
-    <img src="assets/images/logo.png" alt="DePayM Logo" class="logo-img" />
+    <img src="../assets/images/logo.png" alt="DePayM Logo" class="logo-img" />
     <h1>De-PayM</h1>
   </div>
     <nav>
