--- a/de-paym/security.html
+++ b/de-paym/security.html
@@ -377,11 +377,7 @@
   <header class="header">
     <div class="logo">
       <!-- Placeholder for logo -->
-      <svg width="50" height="50" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="25" cy="25" r="20" fill="none" stroke="#63b3ed" stroke-width="3"/>
-        <path d="M15 25 L25 15 L35 25 L25 35 Z" fill="none" stroke="#63b3ed" stroke-width="2"/>
-        <circle cx="25" cy="25" r="5" fill="#63b3ed"/>
-      </svg>
+      <img src="../assets/images/depaym-logo.png" alt="DePayM Logo" class="logo-img" />
       <h1>De-PayM</h1>
     </div>
     <nav>
