--- a/index.html
+++ b/index.html
@@ -567,7 +567,8 @@
   <!-- Header -->
   <header class="header">
     <div class="logo">
-      <img src="assets/images/depaymprotocol.webp" alt="DePayM Logo" class="logo-img" />
+      <img src="assets/images/depaymprotocol.webp" alt="DePayM Logo" class="logo-img" style="width: 100px; height: auto;" />
+
       <div class="logo-text">DePayM <span>Protocol</span></div>
     </div>
     <nav>
