--- a/de-paym/security.html
+++ b/de-paym/security.html
@@ -377,7 +377,7 @@
   <header class="header">
     <div class="logo">
       <!-- Placeholder for logo -->
-      <img src="../assets/images/depaym-logo.png" alt="DePayM Logo" class="logo-img" />
+      <img src="../assets/images/depaym-logo.png" alt="DePayM Logo" class="logo-img" style="width: 100px; height: auto;/>
       <h1>De-PayM</h1>
     </div>
     <nav>
