--- a/de-paym/index.html
+++ b/de-paym/index.html
@@ -545,7 +545,7 @@
   <!-- Header / Navigation -->
   <header class="header">
     <div class="logo">
-    <img src="../assets/images/depaym-logo.png" alt="DePayM Logo" class="logo-img" />
+    <img src="../assets/images/depaym-logo.png" alt="DePayM Logo" class="logo-img" style="width: 100px; height: auto;/>
     <h1>De-PayM</h1>
   </div>
     <button class="mobile-menu-btn" id="mobileMenuBtn">
