--- a/de-paym/community.html
+++ b/de-paym/community.html
@@ -428,7 +428,7 @@
   <header class="header">
     <div class="logo">
       <!-- Placeholder for logo -->
-      <img src="../assets/images/depaym-logo.png" alt="DePayM Logo" class="logo-img" />
+      <img src="../assets/images/depaym-logo.png" alt="DePayM Logo" class="logo-img" style="width: 100px; height: auto;/>
       <div class="logo-text">De-PayM</div>
     </div>
     <nav>
