--- a/de-paym/about.html
+++ b/de-paym/about.html
@@ -509,7 +509,7 @@
 <body>
   <header class="header">
     <div class="logo">
-      <img src="../assets/images/depaym-logo.png" alt="DePayM Logo" class="logo-img" />
+      <img src="../assets/images/depaym-logo.png" alt="DePayM Logo" class="logo-img" style="width: 100px; height: auto;/>
       <div class="logo-text">De-PayM</div>
     </div>
     <nav>
