--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
         </div>
         <h3>De-PayM Mobile App</h3>
         <p>Our flagship consumer application enabling peer-to-peer payments, currency conversion, and financial services.</p>
-        <a href="https://app.depaymprotocol.com" class="btn btn-primary">Visit App Website</a>
+        <a href="https://depaymprotocol.com/de-paym/" class="btn btn-primary">Visit App Website</a>
       </div>
       
       <div class="ecosystem-card">
