--- a/de-paym/contact.html
+++ b/de-paym/contact.html
@@ -594,7 +594,7 @@
           <div class="contact-details">
             <h4>Email Us</h4>
             <p>Have questions? Our team is ready to help.</p>
-            <a href="mailto:support@depaym.com">support@depaym.com</a>
+            <a href="mailto:de-paym@depaymprotocol.com">de-paym@depaymprotocol.com</a>
           </div>
         </div>
         
@@ -616,7 +616,7 @@
           <div class="contact-details">
             <h4>Partnership Inquiries</h4>
             <p>Interested in partnering with De-PayM? Let's talk.</p>
-            <a href="mailto:partners@depaym.com">partners@depaym.com</a>
+            <a href="mailto:invest@depaym.com">invest@depaymprotocol.com</a>
           </div>
         </div>
         
@@ -626,7 +626,7 @@
           </div>
           <div class="contact-details">
             <h4>Our Location</h4>
-            <p>Blockchain Innovation Hub<br>Web3 Avenue, Crypto Valley<br>Switzerland</p>
+            <p>Blockchain Innovation Hub<br>Web3 Boulevard, Crypto Oasis<br>Dubai, UAE</p>
           </div>
         </div>
       </div>
