--- a/de-paym/downloads/apkfile.html
+++ b/de-paym/downloads/apkfile.html
@@ -339,7 +339,7 @@
       Experience QR payments, stablecoin transfers, mining $DPAYM, and BizChat — all in testnet as you earn $DPAYM tokens.
     </p>
     
-    <a href="/de-paym/downloads/de-paym-beta.apk" class="download-button pulse">
+    <a href="https://drive.google.com/file/d/14bAVB41GA2TXSRdnjLjKdtwXp96iGL1p/view?usp=drivesdk" class="download-button pulse">
       <i class="fas fa-download"></i>
       Download Beta APK
     </a>
