--- a/de-paym/index.html
+++ b/de-paym/index.html
@@ -553,13 +553,13 @@
     </button>
     <nav>
       <ul id="navMenu">
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="registration.html" target="_blank" rel="noopener noreferrer">Join</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="policies.html" class="active">Policies</a></li>
-        <li><a href="community.html">Community</a></li>
-        <li><a href="security.html">Security</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/" class="active">Home</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/registration.html" target="_blank" rel="noopener noreferrer">Join</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/about.html">About</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/policies.html" class="active">Policies</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/community.html">Community</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/testnetguide.html">Guide</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
