--- a/de-paym/contact.html
+++ b/de-paym/contact.html
@@ -563,12 +563,12 @@
   </div>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="policies.html">Policies</a></li>
-        <li><a href="community.html">Community</a></li>
-        <li><a href="security.html">Security</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
+        <li><a href="https://depaymprotocol/de-paym/index.html">Home</a></li>
+        <li><a href="https://depaymprotocol/de-paym/about.html">About</a></li>
+        <li><a href="https://depaymprotocol/de-paym/policies.html">Policies</a></li>
+        <li><a href="https://depaymprotocol/de-paym/community.html">Community</a></li>
+        <li><a href="https://depaymprotocol/de-paym/security.html">Security</a></li>
+        <li><a href="https://depaymprotocol/de-paym/contact.html" class="active">Contact</a></li>
       </ul>
     </nav>
   </header>
