--- a/de-paym/testnetguide.html
+++ b/de-paym/testnetguide.html
@@ -735,7 +735,7 @@
         </div>
         <h3>Install De-PayM</h3>
         <p>Download and install the De-PayM beta APK:</p>
-        <a href="https://drive.google.com/file/d/14bAVB41GA2TXSRdnjLjKdtwXp96iGL1p/view?usp=drivesdk" class="btn" style="margin-top: 1rem;">
+        <a https://drive.google.com/file/d/15_BUgLEWnjorloK25A2NqnCnMT1Zuafb/view?usp=drive_link" class="btn" style="margin-top: 1rem;">
           <i class="fas fa-download"></i> Download APK
         </a>
         <p style="font-size: 0.9rem; margin-top: 1rem;">Enable "Install from unknown sources" in your Android settings</p>
