--- a/de-paym/about.html
+++ b/de-paym/about.html
@@ -514,12 +514,12 @@
     </div>
     <nav>
       <ul>
-        <li><a href="https://depaymprotocol/de-paym/index.html">Home</a></li>
-        <li><a href="https://depaymprotocol/de-paym/about.html" class="active">About</a></li>
-        <li><a href="https://depaymprotocol/de-paym/policies.html">Policies</a></li>
-        <li><a href="https://depaymprotocol/de-paym/community.html">Community</a></li>
-        <li><a href="https://depaymprotocol/de-paym/security.html">Security</a></li>
-        <li><a href="https://depaymprotocol/de-paym/contact.html">Contact</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/index.html">Home</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/about.html" class="active">About</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/policies.html">Policies</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/community.html">Community</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/security.html">Security</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
