--- a/de-paym/downloads/apkfile.html
+++ b/de-paym/downloads/apkfile.html
@@ -339,7 +339,7 @@
       Experience QR payments, stablecoin transfers, mining $DPAYM, and BizChat — all in testnet as you earn $DPAYM tokens.
     </p>
     
-    <a href="https://drive.google.com/file/d/15_BUgLEWnjorloK25A2NqnCnMT1Zuafb/view?usp=drive_link" class="download-button pulse">
+    <a href="https://drive.google.com/file/d/16C0GhJd7olRFekJsIMJsP0rrlOav1Ov6/view?usp=drivesdk" class="download-button pulse">
       <i class="fas fa-download"></i>
       Download Beta APK
     </a>
