--- a/de-paym/registration.html
+++ b/de-paym/registration.html
@@ -27,7 +27,7 @@
   </form>
 
   <div class="info">
-    <p ><h4>have the app? </h4><a href="https://drive.google.com/file/d/15_BUgLEWnjorloK25A2NqnCnMT1Zuafb/view?usp=drive_link">Download De-PayM</a></p>
+    <p ><h4>have the app? </h4><a href="https://drive.google.com/file/d/1GO2CoK8L_LE-QlRhe_oeUzDb4O5Sm8rT/view?usp=drivesdk">Download De-PayM</a></p>
   </div>
 
   <script>
