--- a/de-paym/testnetguide.html
+++ b/de-paym/testnetguide.html
@@ -181,7 +181,7 @@
     <!-- Logo -->
     <div class="logo" aria-hidden="true">
       <!-- replace path if needed -->
-      <img src="assets/images/DePayMNowLogo.png" alt="De-PayM logo (neon)" />
+      <img src="../assets/images/DePayMNowLogo.png" alt="De-PayM logo (neon)" />
     </div>
 
     <div class="grid" style="width:100%;">
@@ -259,8 +259,7 @@
         <p class="footer">Tip: Keep the app updated and only download official updates to keep your funds and account safe.</p>
 
         <div class="actions" aria-hidden="false">
-          <button id="continueBtn" class="btn" title="Continue to app">Continue</button>
-          <a href="#" id="skipBtn" class="btn secondary">Open Settings</a>
+          <button href="https://depaymprotocol.com/de-paym/registration.html" id="continueBtn" class="btn" title="Continue to app">Register</button>
         </div>
       </article>
 
