--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DePayM Protocol | Powering the Future of Decentralized Payments</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
   <style>
     /* Global Styles */
     :root {
@@ -752,7 +757,7 @@
     </div>
     
     <div class="copyright">
-      <p>© 2025 DePayM Protocol. All rights reserved. | Building the infrastructure for decentralized financial systems.</p>
+      <p>© 2026 DePayM Protocol. All rights reserved. | Building the infrastructure for decentralized financial systems.</p>
     </div>
   </footer>
 
