--- a/de-paym/index.html
+++ b/de-paym/index.html
@@ -545,9 +545,14 @@
   <!-- Header / Navigation -->
   <header class="header">
     <div class="logo">
-    <img src="../assets/images/depaym-logo.png" alt="DePayM Logo" class="logo-img" style="width: 100px; height: auto;/>
+    <img src="../assets/images/DePayMNowLogo.png" alt="DePayM Logo" class="logo-img" style="width: 100px; height: auto;/>
     <h1>De-PayM</h1>
   </div>
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
     <button class="mobile-menu-btn" id="mobileMenuBtn">
       <i class="fas fa-bars"></i>
     </button>
