--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
   <!-- Header -->
   <header class="header">
     <div class="logo">
-      <img src="assets/images/depaymprotocol.webp" alt="DePayM Logo" class="logo-img" style="width: 100px; height: auto;" />
+      <img src="assets/images/DePayMNowLogo.png" alt="DePayM Logo" class="logo-img" style="width: 100px; height: auto;" />
 
       <div class="logo-text">DePayM <span>Protocol</span></div>
     </div>
