Updated CSS for contact and security screen

--- a/de-paym/about.html
+++ b/de-paym/about.html
@@ -513,21 +513,28 @@
 </head>
 <body>
   <header class="header">
-    <div class="logo">
-      <img src="../assets/images/depaym-logo.png" alt="DePayM Logo" class="logo-img" style="width: 100px; height: auto;/>
-      <div class="logo-text">De-PayM</div>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="https://depaymprotocol.com/de-paym/index.html">Home</a></li>
-        <li><a href="https://depaymprotocol.com/de-paym/about.html" class="active">About</a></li>
-        <li><a href="https://depaymprotocol.com/de-paym/policies.html">Policies</a></li>
-        <li><a href="https://depaymprotocol.com/de-paym/community.html">Community</a></li>
-        <li><a href="https://depaymprotocol.com/de-paym/security.html">Security</a></li>
-        <li><a href="https://depaymprotocol.com/de-paym/contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <div class="logo" style="display:flex; align-items:center; gap:1rem;">
+    <img
+      src="../assets/images/DePayMNowLogo.png"
+      alt="DePayM Logo"
+      class="logo-img"
+      style="width:100px; height:auto;"
+    />
+    <div class="logo-text">De-PayM</div>
+  </div>
+
+  <nav>
+    <ul>
+      <li><a href="https://depaymprotocol.com/de-paym/index.html">Home</a></li>
+      <li><a href="https://depaymprotocol.com/de-paym/about.html">About</a></li>
+      <li><a href="https://depaymprotocol.com/de-paym/policies.html">Policies</a></li>
+      <li><a href="https://depaymprotocol.com/de-paym/community.html">Community</a></li>
+      <li><a href="https://depaymprotocol.com/de-paym/security.html">Security</a></li>
+      <li><a href="https://depaymprotocol.com/de-paym/contact.html" class="active">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
 
   <section class="page-banner about-banner">
     <h2>Our Vision</h2>
@@ -692,7 +699,7 @@
         
         <div class="timeline-item">
           <div class="timeline-content">
-            <span class="date">Q4 2025</span>
+            <span class="date">To be announced</span>
             <h4>Mainnet Launch</h4>
             <p>Official launch of De-PayM on multiple blockchain networks</p>
           </div>
@@ -710,7 +717,7 @@
   </section>
 
   <footer>
-    <p>© 2025 DePayMProtocol. All rights reserved. | Building a decentralized future for financial inclusion.</p>
+    <p>© 2026 DePayMProtocol. All rights reserved. | Building a decentralized future for financial inclusion.</p>
   </footer>
 
   <script>
