--- a/de-paym/community.html
+++ b/de-paym/community.html
@@ -433,7 +433,12 @@
   <header class="header">
     <div class="logo">
       <!-- Placeholder for logo -->
-      <img src="../assets/images/depaym-logo.png" alt="DePayM Logo" class="logo-img" style="width: 100px; height: auto;/>
+      <img
+      src="../assets/images/DePayMNowLogo.png"
+      alt="DePayM Logo"
+      class="logo-img"
+      style="width:100px; height:auto;"
+    />
       <div class="logo-text">De-PayM</div>
     </div>
     <nav>
@@ -589,7 +594,7 @@
   </section>
 
   <footer>
-    <p>© 2025 DePayMProtocol. All rights reserved. | Building a decentralized future for financial inclusion.</p>
+    <p>© 2026 DePayMProtocol. All rights reserved. | Building a decentralized future for financial inclusion.</p>
   </footer>
 
   <script>
