--- a/de-paym/index.html
+++ b/de-paym/index.html
@@ -545,8 +545,12 @@
   <!-- Header / Navigation -->
   <header class="header">
     <div class="logo">
-    <img src="../assets/images/DePayMNowLogo.png" alt="DePayM Logo" class="logo-img" style="width: 100px; height: auto;/>
-    <h1>De-PayM</h1>
+    <img
+      src="../assets/images/DePayMNowLogo.png"
+      alt="DePayM Logo"
+      class="logo-img"
+      style="width:100px; height:auto;"
+    />
   </div>
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -687,7 +691,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 DePayMProtocol. All rights reserved. | Building a decentralized future for financial inclusion.</p>
+    <p>© 2026 DePayMProtocol. All rights reserved. | Building a decentralized future for financial inclusion.</p>
   </footer>
 
   <script>
