Updated CSS for contact and security screen

--- a/de-paym/about.html
+++ b/de-paym/about.html
@@ -526,11 +526,11 @@
   <nav>
     <ul>
       <li><a href="https://depaymprotocol.com/de-paym/index.html">Home</a></li>
-      <li><a href="https://depaymprotocol.com/de-paym/about.html">About</a></li>
+      <li><a href="https://depaymprotocol.com/de-paym/about.html" class="active">About</a></li>
       <li><a href="https://depaymprotocol.com/de-paym/policies.html">Policies</a></li>
       <li><a href="https://depaymprotocol.com/de-paym/community.html">Community</a></li>
       <li><a href="https://depaymprotocol.com/de-paym/security.html">Security</a></li>
-      <li><a href="https://depaymprotocol.com/de-paym/contact.html" class="active">Contact</a></li>
+      <li><a href="https://depaymprotocol.com/de-paym/contact.html">Contact</a></li>
     </ul>
   </nav>
 </header>
