--- a/de-paym/community.html
+++ b/de-paym/community.html
@@ -445,7 +445,7 @@
       <ul>
         <li><a href="https://depaymprotocol.com/de-paym/index.html">Home</a></li>
         <li><a href="https://depaymprotocol.com/de-paym/about.html">About</a></li>
-        <li><a href="https://depaymprotocol.com/de-paym/policies.html" class="active">Policies</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/policies.html">Policies</a></li>
         <li><a href="https://depaymprotocol.com/de-paym/community.html" class="active">Community</a></li>
         <li><a href="https://depaymprotocol.com/de-paym/testnetguide.html">Test De-PayM</a></li>
         <li><a href="https://depaymprotocol.com/de-paym/contact.html">Contact</a></li>
