--- a/de-paym/index.html
+++ b/de-paym/index.html
@@ -565,7 +565,7 @@
         <li><a href="https://depaymprotocol.com/de-paym/" class="active">Home</a></li>
         <li><a href="https://depaymprotocol.com/de-paym/registration.html" target="_blank" rel="noopener noreferrer">Join</a></li>
         <li><a href="https://depaymprotocol.com/de-paym/about.html">About</a></li>
-        <li><a href="https://depaymprotocol.com/de-paym/policies.html" class="active">Policies</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/policies.html">Policies</a></li>
         <li><a href="https://depaymprotocol.com/de-paym/community.html">Community</a></li>
         <li><a href="https://depaymprotocol.com/de-paym/testnetguide.html">Guide</a></li>
         <li><a href="https://depaymprotocol.com/de-paym/contact.html">Contact</a></li>
