--- a/de-paym/security.html
+++ b/de-paym/security.html
@@ -415,7 +415,7 @@ nav a.active::after {
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="policies.html" class="active">Policies</a></li>
+        <li><a href="policies.html">Policies</a></li>
         <li><a href="community.html">Community</a></li>
         <li><a href="security.html" class="active">Security</a></li>
         <li><a href="contact.html">Contact</a></li>
