--- a/de-paym/index.html
+++ b/de-paym/index.html
@@ -568,6 +568,7 @@
         <li><a href="https://depaymprotocol.com/de-paym/policies.html">Policies</a></li>
         <li><a href="https://depaymprotocol.com/de-paym/community.html">Community</a></li>
         <li><a href="https://depaymprotocol.com/de-paym/testnetguide.html">Guide</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/registration.html">Register</a></li>
         <li><a href="https://depaymprotocol.com/de-paym/contact.html">Contact</a></li>
       </ul>
     </nav>
