--- a/de-paym/registration.html
+++ b/de-paym/registration.html
@@ -1,59 +1,304 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
-  <title>Register - De-PayM</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>De-PayM | Register</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
-    body { font-family: Arial, sans-serif; padding: 2rem; background: linear-gradient(135deg, #2EC1EA, #443D3D); color: #333; }
-    form { max-width: 400px; margin: auto; background: #fff; padding: 2rem; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
-    input { width: 100%; padding: 0.75rem; margin: 0.5rem 0 1rem; border-radius: 8px; border: 1px solid #ccc; }
-    button { background: #0077cc; color: white; padding: 0.75rem; border: none; border-radius: 8px; cursor: pointer; width: 100%; }
-    button:hover { background: #005fa3; }
-    .info { text-align: center; margin-top: 2rem; }
-    .info a { color: #ABFAFB; text-decoration: none; font-weight: 200; font-size: 24px; }
-    .info h4 { color: #fff;}
+    :root {
+      --primary: #2b6cb0;
+      --primary-dark: #1a4f79;
+      --accent: #63b3ed;
+      --text: #e2e8f0;
+      --gradient: linear-gradient(135deg, var(--primary) 0%, var(--accent) 100%);
+      --gradient-reverse: linear-gradient(135deg, var(--accent) 0%, var(--primary) 100%);
+      --shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+      --card-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
+      --transition: all 0.3s ease;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
+      color: var(--text);
+      overflow-x: hidden;
+    }
+
+    /* Header */
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 5%;
+      background: rgba(15, 23, 42, 0.8);
+      backdrop-filter: blur(10px);
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      box-shadow: var(--shadow);
+    }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
+
+    .logo img {
+      height: 50px;
+      filter: drop-shadow(0 0 5px rgba(99, 179, 237, 0.5));
+    }
+
+    nav ul {
+      display: flex;
+      list-style: none;
+      gap: 1.5rem;
+    }
+
+    nav a {
+      color: #cbd5e1;
+      text-decoration: none;
+      font-weight: 500;
+      padding: 0.5rem 1rem;
+      border-radius: 30px;
+      transition: var(--transition);
+      position: relative;
+    }
+
+    nav a:hover {
+      color: var(--accent);
+      background: rgba(99, 179, 237, 0.1);
+    }
+
+    nav a.active {
+      color: white;
+      background: var(--gradient);
+      box-shadow: 0 0 15px rgba(99, 179, 237, 0.3);
+    }
+
+    nav a.active::after {
+      content: '';
+      position: absolute;
+      bottom: -5px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 6px;
+      height: 6px;
+      background: var(--accent);
+      border-radius: 50%;
+    }
+
+    .mobile-menu-btn {
+      display: none;
+      background: none;
+      border: none;
+      color: var(--accent);
+      font-size: 1.5rem;
+      cursor: pointer;
+    }
+
+    /* Hero */
+    .hero {
+      min-height: 80vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      text-align: center;
+      padding: 2rem 5%;
+      position: relative;
+    }
+
+    .hero h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+      background: var(--gradient);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .hero p {
+      color: #cbd5e1;
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+      max-width: 600px;
+    }
+
+    /* Registration Form */
+    .register-card {
+      background: rgba(30, 41, 59, 0.7);
+      padding: 2rem;
+      border-radius: 20px;
+      box-shadow: var(--card-shadow);
+      max-width: 500px;
+      margin: 2rem auto;
+    }
+
+    .register-card form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .register-card input {
+      padding: 0.75rem;
+      border-radius: 12px;
+      border: 1px solid #444;
+      background: #0f172a;
+      color: white;
+      width: 100%;
+    }
+
+    .register-card button {
+      padding: 1rem;
+      border-radius: 30px;
+      border: none;
+      background: var(--gradient);
+      color: white;
+      font-weight: 600;
+      cursor: pointer;
+      transition: var(--transition);
+    }
+
+    .register-card button:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 6px 20px rgba(99, 179, 237, 0.4);
+    }
+
+    .ref-input {
+      position: relative;
+    }
+
+    .ref-input i {
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: #22c55e;
+      display: none;
+    }
+
+    @media(max-width:900px) {
+      nav ul {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background: rgba(15, 23, 42, 0.95);
+        padding: 1rem 0;
+      }
+
+      nav ul.show {
+        display: flex;
+      }
+
+      .mobile-menu-btn {
+        display: block;
+      }
+    }
   </style>
 </head>
-<body>
-  <h2 style="text-align:center;">Register to De-PayM</h2>
-  <form id="register-form">
-    <input type="email" id="email" placeholder="Email" required />
-    <input type="text" id="username" placeholder="Username" required />
-    <input type="password" id="password" placeholder="Password" required />
-    <input type="password" id="confirmPassword" placeholder="Confirm Password" required />
-    <input type="text" id="referrer" placeholder="Referral Wallet Address (auto-filled)" readonly />
-    <button type="submit">Register</button>
-  </form>
 
-  <div class="info">
-    <p ><h4>have the app? </h4><a href="https://drive.google.com/file/d/1GO2CoK8L_LE-QlRhe_oeUzDb4O5Sm8rT/view?usp=drivesdk">Download De-PayM</a></p>
+<body>
+
+  <!-- Header / Nav -->
+  <header class="header">
+    <div class="logo">
+      <img src="../assets/images/DePayMNowLogo.png" alt="DePayM Logo" />
+      <h1>De-PayM</h1>
+    </div>
+    <button class="mobile-menu-btn" id="mobileMenuBtn"><i class="fas fa-bars"></i></button>
+    <nav>
+      <ul id="navMenu">
+        <li><a href="https://depaymprotocol.com/de-paym/">Home</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/registration.html" target="_blank" rel="noopener noreferrer">Join</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/about.html">About</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/policies.html">Policies</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/community.html">Community</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/testnetguide.html">Guide</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/registration.html" class="active">Register</a></li>
+        <li><a href="https://depaymprotocol.com/de-paym/contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Hero -->
+  <section class="hero">
+    <h1>Join De-PayM Today</h1>
+    <p>Register now to start earning $DPAYM tokens and enjoy futuristic blockchain payments. Use a referral code if you
+      have one to boost your mining power.</p>
+  </section>
+
+  <!-- Registration Form -->
+  <div class="register-card">
+    <form id="register-form">
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="text" id="username" placeholder="Username" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <input type="password" id="confirmPassword" placeholder="Confirm Password" required />
+      <div class="ref-input">
+        <input type="text" id="referrer" placeholder="Referral Wallet Address (optional)" />
+        <i id="ref-valid" class="fas fa-check-circle"></i>
+      </div>
+      <button type="submit">Register</button>
+    </form>
+    <p style="color:#cbd5e1; font-size:0.9rem; text-align:center; margin-top:1rem;">
+      Already have the app? <a
+        href="https://drive.google.com/file/d/1GO2CoK8L_LE-QlRhe_oeUzDb4O5Sm8rT/view?usp=drivesdk"
+        style="color:#63b3ed;">Download De-PayM</a>
+    </p>
   </div>
 
   <script>
-    // Autofill referrer address from query parameter
+    // Mobile menu toggle
+    const mobileMenuBtn = document.getElementById('mobileMenuBtn');
+    const navMenu = document.getElementById('navMenu');
+    mobileMenuBtn.addEventListener('click', () => navMenu.classList.toggle('show'));
+
+    const referrerInput = document.getElementById('referrer');
+    const refValidIcon = document.getElementById('ref-valid');
+
+    // Autofill referral code from URL
     const urlParams = new URLSearchParams(window.location.search);
     const ref = urlParams.get('ref');
-    if (ref) {
-      document.getElementById('referrer').value = ref;
-    }
+    if (ref) referrerInput.value = ref;
 
-    // Handle registration
-    document.getElementById('register-form').addEventListener('submit', async function(e) {
+    // Live validation of referral address
+    referrerInput.addEventListener('input', () => {
+      const val = referrerInput.value.trim();
+      if (val && /^0x[a-fA-F0-9]{40}$/.test(val)) {
+        refValidIcon.style.display = 'inline';
+      } else {
+        refValidIcon.style.display = 'none';
+      }
+    });
+
+    // Form submission
+    document.getElementById('register-form').addEventListener('submit', async e => {
       e.preventDefault();
       const email = document.getElementById('email').value;
       const username = document.getElementById('username').value;
       const password = document.getElementById('password').value;
       const confirmPassword = document.getElementById('confirmPassword').value;
-      const referrer = document.getElementById('referrer').value;
+      const referrer = referrerInput.value.trim();
 
       if (password !== confirmPassword) {
-        alert('Passwords do not match');
+        alert('Passwords do not match!');
+        return;
+      }
+
+      if (referrer && !/^0x[a-fA-F0-9]{40}$/.test(referrer)) {
+        alert('Referral address is invalid!');
         return;
       }
 
@@ -63,16 +308,16 @@
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ email, username, password, referrer })
         });
-
         const data = await res.json();
         if (!res.ok) throw new Error(data.message);
-
         alert('Registration successful! Now download the De-PayM app.');
-        window.location.href = 'https://your-dapp.com/download';
+        window.location.href = 'https://drive.google.com/file/d/1GO2CoK8L_LE-QlRhe_oeUzDb4O5Sm8rT/view?usp=drivesdk';
       } catch (err) {
         alert('Error: ' + err.message);
       }
     });
   </script>
+
 </body>
+
 </html>
