--- a/de-paym/testnetguide.html
+++ b/de-paym/testnetguide.html
@@ -1,187 +1,309 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
   <title>How to use De-PayM</title>
 
   <style>
-    :root{
-      --bg:#000;
-      --card-bg: rgba(255,255,255,0.03);
-      --muted: rgba(230,247,251,0.9);
-      --accent: #00e6ff; /* cyan neon */
-      --accent-2: #fff6a3; /* yellow highlight */
+    :root {
+      --bg: #000;
+      --card-bg: rgba(255, 255, 255, 0.03);
+      --muted: rgba(230, 247, 251, 0.9);
+      --accent: #00e6ff;
+      /* cyan neon */
+      --accent-2: #fff6a3;
+      /* yellow highlight */
       --title: #9ef0ff;
       --danger: #ffd8a8;
-      --glass-border: rgba(255,255,255,0.06);
+      --glass-border: rgba(255, 255, 255, 0.06);
       --max-width: 980px;
       --pad: 20px;
       --radius: 14px;
-      --shadow: 0 14px 40px rgba(0,0,0,0.6);
+      --shadow: 0 14px 40px rgba(0, 0, 0, 0.6);
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial;
     }
 
-    html,body{height:100%;}
-    body{
-      margin:0;
-      min-height:100%;
-      background: radial-gradient(circle at 10% 10%, rgba(0,230,255,0.04) 0%, transparent 20%), linear-gradient(180deg,#050505 0%, #071019 60%);
-      color:var(--muted);
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-      display:flex;
-      align-items:flex-start;
-      justify-content:center;
-      padding:40px 18px;
+    html,
+    body {
+      height: 100%;
     }
 
-    .wrap{
-      width:100%;
-      max-width:var(--max-width);
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      gap:18px;
+    body {
+      margin: 0;
+      min-height: 100%;
+      background: radial-gradient(circle at 10% 10%, rgba(0, 230, 255, 0.04) 0%, transparent 20%), linear-gradient(180deg, #050505 0%, #071019 60%);
+      color: var(--muted);
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      padding: 40px 18px;
     }
+
+    .wrap {
+      width: 100%;
+      max-width: var(--max-width);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 18px;
+    }
+
+    .header {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 16px 5%;
+      position: sticky;
+      top: 0;
+      background: rgba(0, 0, 0, 0.85);
+      backdrop-filter: blur(10px);
+      z-index: 1000;
+      box-shadow: 0 2px 20px rgba(0, 0, 0, 0.5);
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 18px;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav a {
+      color: var(--muted);
+      text-decoration: none;
+      font-weight: 500;
+      padding: 6px 12px;
+      border-radius: 20px;
+      transition: 0.3s;
+    }
+
+    nav a:hover {
+      color: #fff;
+      background: rgba(0, 230, 255, 0.08);
+    }
+
+    .mobile-menu-btn {
+      display: none;
+      font-size: 1.5rem;
+      background: none;
+      border: none;
+      color: var(--accent);
+      cursor: pointer;
+    }
+
+    @media(max-width:900px) {
+      nav ul {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background: rgba(0, 0, 0, 0.95);
+        padding: 12px 0;
+      }
+
+      nav ul.show {
+        display: flex;
+      }
+
+      .mobile-menu-btn {
+        display: block;
+      }
+    }
+
 
     /* Logo */
     .logo {
-      width:160px;
-      height:160px;
-      border-radius:20px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      overflow:hidden;
-      box-shadow: 0 6px 30px rgba(0,230,255,0.06);
-      background:linear-gradient(180deg, rgba(0,230,255,0.02), rgba(255,255,255,0.01));
+      width: 160px;
+      height: 160px;
+      border-radius: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      box-shadow: 0 6px 30px rgba(0, 230, 255, 0.06);
+      background: linear-gradient(180deg, rgba(0, 230, 255, 0.02), rgba(255, 255, 255, 0.01));
     }
-    .logo img{ width:100%; height:100%; object-fit:contain; display:block; }
+
+    .logo img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      display: block;
+    }
 
     /* Card */
-    .card{
-      width:100%;
-      background:var(--card-bg);
-      border-radius:var(--radius);
-      padding:24px;
-      border:1px solid var(--glass-border);
-      box-shadow:var(--shadow);
+    .card {
+      width: 100%;
+      background: var(--card-bg);
+      border-radius: var(--radius);
+      padding: 24px;
+      border: 1px solid var(--glass-border);
+      box-shadow: var(--shadow);
       backdrop-filter: blur(8px);
     }
 
-    .title{
-      color:#fff;
-      font-weight:700;
-      font-size:20px;
-      margin-bottom:6px;
+    .title {
+      color: #fff;
+      font-weight: 700;
+      font-size: 20px;
+      margin-bottom: 6px;
     }
 
-    .section-title{
-      color:var(--title);
-      font-weight:700;
-      margin-top:14px;
-      margin-bottom:8px;
-      font-size:15px;
+    .section-title {
+      color: var(--title);
+      font-weight: 700;
+      margin-top: 14px;
+      margin-bottom: 8px;
+      font-size: 15px;
     }
 
-    p, .paragraph {
-      color:var(--muted);
-      margin:0;
-      font-size:14px;
-      line-height:1.6;
+    p,
+    .paragraph {
+      color: var(--muted);
+      margin: 0;
+      font-size: 14px;
+      line-height: 1.6;
     }
 
-    .em{ color:var(--accent-2); font-weight:700; }
-
-    .warning{
-      color:var(--danger);
-      background: rgba(255,210,140,0.04);
-      padding:12px;
-      border-radius:8px;
-      border:1px solid rgba(255,210,140,0.08);
-      margin-top:8px;
+    .em {
+      color: var(--accent-2);
+      font-weight: 700;
     }
 
-    .footer{
-      margin-top:14px;
-      color:rgba(255,255,255,0.75);
-      font-size:13px;
+    .warning {
+      color: var(--danger);
+      background: rgba(255, 210, 140, 0.04);
+      padding: 12px;
+      border-radius: 8px;
+      border: 1px solid rgba(255, 210, 140, 0.08);
+      margin-top: 8px;
+    }
+
+    .footer {
+      margin-top: 14px;
+      color: rgba(255, 255, 255, 0.75);
+      font-size: 13px;
     }
 
     /* Continue button */
-    .actions{
-      display:flex;
-      gap:12px;
-      margin-top:18px;
-      justify-content:flex-end;
-      flex-wrap:wrap;
+    .actions {
+      display: flex;
+      gap: 12px;
+      margin-top: 18px;
+      justify-content: flex-end;
+      flex-wrap: wrap;
     }
 
-    .btn{
-      display:inline-flex;
-      align-items:center;
-      gap:10px;
+    .btn {
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
       background: linear-gradient(90deg, var(--accent) 0%, #63b3ed 100%);
-      color:#001;
-      padding:12px 18px;
-      border-radius:12px;
-      border:none;
-      font-weight:700;
-      cursor:pointer;
-      text-decoration:none;
-      box-shadow:0 10px 30px rgba(0,230,255,0.12);
+      color: #001;
+      padding: 12px 18px;
+      border-radius: 12px;
+      border: none;
+      font-weight: 700;
+      cursor: pointer;
+      text-decoration: none;
+      box-shadow: 0 10px 30px rgba(0, 230, 255, 0.12);
     }
 
-    .btn.secondary{
-      background:transparent;
-      color:var(--muted);
-      border:1px solid rgba(255,255,255,0.04);
-      box-shadow:none;
+    .btn.secondary {
+      background: transparent;
+      color: var(--muted);
+      border: 1px solid rgba(255, 255, 255, 0.04);
+      box-shadow: none;
     }
 
     /* Responsive layout for long copy: two-column optional */
-    .grid{
-      display:grid;
+    .grid {
+      display: grid;
       grid-template-columns: 1fr;
-      gap:18px;
+      gap: 18px;
     }
 
-    @media(min-width:900px){
-      .grid{ grid-template-columns: 1fr 360px; align-items:start; }
-      .card { padding:28px; }
+    @media(min-width:900px) {
+      .grid {
+        grid-template-columns: 1fr 360px;
+        align-items: start;
+      }
+
+      .card {
+        padding: 28px;
+      }
     }
 
     /* Sidebar quick-check */
-    .sidebar{
-      position:sticky;
-      top:24px;
-      align-self:flex-start;
-      background: rgba(255,255,255,0.02);
-      border-radius:12px;
-      padding:16px;
-      border:1px solid rgba(255,255,255,0.03);
+    .sidebar {
+      position: sticky;
+      top: 24px;
+      align-self: flex-start;
+      background: rgba(255, 255, 255, 0.02);
+      border-radius: 12px;
+      padding: 16px;
+      border: 1px solid rgba(255, 255, 255, 0.03);
     }
-    .checklist{ font-size:14px; line-height:1.5; color:var(--muted); }
-    .checklist li{ margin-bottom:8px; }
+
+    .checklist {
+      font-size: 14px;
+      line-height: 1.5;
+      color: var(--muted);
+    }
+
+    .checklist li {
+      margin-bottom: 8px;
+    }
 
     /* subtle headings inside card */
-    .small-title{ color:#dffbff; font-weight:700; margin-top:10px; margin-bottom:6px; }
+    .small-title {
+      color: #dffbff;
+      font-weight: 700;
+      margin-top: 10px;
+      margin-bottom: 6px;
+    }
 
     /* anchor link */
-    a.anchor{
-      color:var(--accent);
-      text-decoration:none;
-      font-weight:600;
+    a.anchor {
+      color: var(--accent);
+      text-decoration: none;
+      font-weight: 600;
     }
   </style>
 </head>
+
 <body>
+
+  <header class="header">
+    <div class="logo">
+      <img src="../assets/images/DePayMNowLogo.png" alt="De-PayM logo" />
+      <span style="color:#fff;font-weight:700;">De-PayM</span>
+    </div>
+    <button class="mobile-menu-btn" id="mobileMenuBtn">&#9776;</button>
+    <nav>
+      <ul id="navMenu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Community</a></li>
+        <li><a href="#" class="active">Guide</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
   <div class="wrap" role="main" aria-labelledby="pageTitle">
     <!-- Logo -->
     <div class="logo" aria-hidden="true">
@@ -209,14 +331,16 @@
 
         <h2 class="section-title">2. Install the app</h2>
         <p class="paragraph">
-          • If you registered on the web, download the official De-PayM app from the Google Play Store or obtain the official APK from the De-PayM Protocol website.<br>
+          • If you registered on the web, download the official De-PayM app from the Google Play Store or obtain the
+          official APK from the De-PayM Protocol website.<br>
           • Always use official sources to avoid fake apps.
         </p>
 
         <h2 class="section-title">3. Register</h2>
         <p class="paragraph">
           • Enter username, email and a strong password.<br>
-          • Password rules: at least one uppercase letter (A–Z), at least one number (0–9), and a minimum of 8 characters.
+          • Password rules: at least one uppercase letter (A–Z), at least one number (0–9), and a minimum of 8
+          characters.
         </p>
 
         <h2 class="section-title">4. Verify your email</h2>
@@ -227,14 +351,17 @@
 
         <h2 class="section-title">5. Connect a wallet</h2>
         <p class="paragraph">
-          • Tap <span class="em">Connect Wallet</span>. You can create a new wallet or import one using your Seed/Mnemonic phrase or Private key (EVM wallets supported).<br>
+          • Tap <span class="em">Connect Wallet</span>. You can create a new wallet or import one using your
+          Seed/Mnemonic phrase or Private key (EVM wallets supported).<br>
           • After success, your wallet is linked to the app.
         </p>
 
         <h2 class="section-title">6. Start mining & boost</h2>
         <p class="paragraph">
           • Tap <span class="em">Start Mining</span>.<br>
-          • To boost your mining power, make on-chain transactions with friends via the app’s Pay and P2P (Withdraw / Deposit) features — create QR codes for friends to scan and transact. On-chain activity increases mining power.
+          • To boost your mining power, make on-chain transactions with friends via the app’s Pay and P2P (Withdraw /
+          Deposit) features — create QR codes for friends to scan and transact. On-chain activity increases mining
+          power.
         </p>
 
         <h2 class="section-title">Security — very important</h2>
@@ -248,7 +375,8 @@
         <p class="paragraph">
           • No verification email: wait a few minutes, check Spam, or resend.<br>
           • Referral not applied: use the referral link during registration or paste the code in the referral field.<br>
-          • Lost wallet access: import your wallet using your seed/private key. If you do not have them, funds cannot be recovered.
+          • Lost wallet access: import your wallet using your seed/private key. If you do not have them, funds cannot be
+          recovered.
         </p>
 
         <h2 class="section-title">Quick checklist</h2>
@@ -259,14 +387,15 @@
           <li>Connected or created EVM wallet (seed backed up)</li>
           <li>Clicked Start Mining</li>
           <li>(Optional) Entered referral code to boost mining</li>
-          </ul>
-          
-          <p class="footer">Tip: Keep the app updated and only download official updates to keep your funds and account safe.</p>
-          
-          <div class="actions" aria-hidden="false">
-            <button id="continueBtn" class="btn" data-url="https://depaymprotocol.com/de-paym/registration.html">
-              Register
-            </button>
+        </ul>
+
+        <p class="footer">Tip: Keep the app updated and only download official updates to keep your funds and account
+          safe.</p>
+
+        <div class="actions" aria-hidden="false">
+          <button id="continueBtn" class="btn" data-url="https://depaymprotocol.com/de-paym/registration.html">
+            Register
+          </button>
 
         </div>
       </article>
@@ -275,22 +404,26 @@
       <aside class="sidebar" aria-label="Quick actions & referral" role="complementary">
         <h3 style="color:var(--accent); margin:0 0 8px 0;">Onboarding details</h3>
         <p style="margin:0 0 12px 0; color:var(--muted); font-size:14px;">
-          This screen can be shown once per visitor by setting a flag in localStorage. Click <strong>Continue</strong> to mark onboarding complete.
+          This screen can be shown once per visitor by setting a flag in localStorage. Click <strong>Continue</strong>
+          to mark onboarding complete.
         </p>
 
         <div style="margin-bottom:12px;">
           <label style="display:block; font-size:13px; color:var(--muted); margin-bottom:8px;">Referral code</label>
           <div style="display:flex; gap:8px; align-items:center;">
-            <code id="refCode" style="background:rgba(0,0,0,0.35); padding:8px 10px; border-radius:8px; color:#fff; font-family:monospace; font-size:13px; flex:1; overflow:hidden; text-overflow:ellipsis;">0xFF4AF88F590ac538d2f138D529C6BF5539312d1a</code>
+            <code id="refCode"
+              style="background:rgba(0,0,0,0.35); padding:8px 10px; border-radius:8px; color:#fff; font-family:monospace; font-size:13px; flex:1; overflow:hidden; text-overflow:ellipsis;">0xFF4AF88F590ac538d2f138D529C6BF5539312d1a</code>
             <button id="copyBtn" class="btn" style="padding:8px 12px; font-size:13px;">Copy</button>
           </div>
           <p id="copyMsg" style="height:20px; margin-top:8px; font-size:13px;"></p>
         </div>
 
         <div style="border-top:1px solid rgba(255,255,255,0.03); padding-top:12px;">
-          <strong style="display:block; color:var(--muted); font-size:13px; margin-bottom:8px;">Testnet resources</strong>
+          <strong style="display:block; color:var(--muted); font-size:13px; margin-bottom:8px;">Testnet
+            resources</strong>
           <a class="anchor" href="https://sepoliafaucet.com" target="_blank" rel="noreferrer">Sepolia Faucet</a><br>
-          <a class="anchor" href="https://faucet.quicknode.com/base/sepolia" target="_blank" rel="noreferrer">QuickNode Base Sepolia</a><br>
+          <a class="anchor" href="https://faucet.quicknode.com/base/sepolia" target="_blank" rel="noreferrer">QuickNode
+            Base Sepolia</a><br>
           <a class="anchor" href="#" style="opacity:0.88">Download Beta APK</a>
         </div>
       </aside>
@@ -298,13 +431,18 @@
   </div>
 
   <script>
-    (function(){
+    (function () {
       const redirectUrl = "/"; // change to your app's login/home route
       const continueBtn = document.getElementById("continueBtn");
       const skipBtn = document.getElementById("skipBtn");
       const copyBtn = document.getElementById("copyBtn");
       const refCodeEl = document.getElementById("refCode");
       const copyMsg = document.getElementById("copyMsg");
+
+      const mobileMenuBtn = document.getElementById('mobileMenuBtn');
+      const navMenu = document.getElementById('navMenu');
+      mobileMenuBtn.addEventListener('click', () => navMenu.classList.toggle('show'));
+
 
       // If you want this page to auto-redirect when onboarding already seen:
       try {
@@ -329,13 +467,13 @@
 
 
       // Skip opens settings (example) — change as needed
-      skipBtn.addEventListener("click", function(e){
+      skipBtn.addEventListener("click", function (e) {
         e.preventDefault();
         alert("Open app settings or login page. Replace this with your desired action.");
       });
 
       // Copy referral code
-      copyBtn.addEventListener("click", function(){
+      copyBtn.addEventListener("click", function () {
         const text = refCodeEl.textContent.trim();
         if (!navigator.clipboard) {
           // fallback
@@ -352,21 +490,22 @@
             copyMsg.style.color = "#ef4444";
           }
           document.body.removeChild(t);
-          setTimeout(()=> copyMsg.textContent = "", 3000);
+          setTimeout(() => copyMsg.textContent = "", 3000);
           return;
         }
 
-        navigator.clipboard.writeText(text).then(function(){
+        navigator.clipboard.writeText(text).then(function () {
           copyMsg.textContent = "Copied to clipboard!";
           copyMsg.style.color = "#10b981";
-          setTimeout(()=> copyMsg.textContent = "", 3000);
-        }).catch(function(){
+          setTimeout(() => copyMsg.textContent = "", 3000);
+        }).catch(function () {
           copyMsg.textContent = "Copy failed";
           copyMsg.style.color = "#ef4444";
-          setTimeout(()=> copyMsg.textContent = "", 3000);
+          setTimeout(() => copyMsg.textContent = "", 3000);
         });
       });
     })();
   </script>
 </body>
+
 </html>
