--- a/de-paym/community.html
+++ b/de-paym/community.html
@@ -574,7 +574,7 @@
           </div>
           <h3>Telegram</h3>
           <p>Join our active Telegram community for real-time discussions, support, and announcements from the team.</p>
-          <a href="https://t.me/DePayMProtocol" class="btn" target="_blank">
+          <a href="https://t.me/De_PayM" class="btn" target="_blank">
             <i class="fab fa-telegram"></i> Join Telegram
           </a>
         </div>
@@ -585,8 +585,19 @@
           </div>
           <h3>Discord</h3>
           <p>Connect with developers, validators, and community members in our Discord server with dedicated channels.</p>
-          <a href="https://discord.gg/QePaBKzM" class="btn" target="_blank">
+          <a href="https://discord.gg/HbvEpSSKfR" class="btn" target="_blank">
             <i class="fab fa-discord"></i> Join Discord
+          </a>
+        </div>
+
+        <div class="social-card whatsapp">
+          <div class="social-icon">
+            <i class="fab fa-whatsapp"></i>
+          </div>
+          <h3>WhatsApp</h3>
+          <p>Join our WhatsApp group for quick updates and community discussions.</p>
+          <a href="https://chat.whatsapp.com/Dl2Ggh4iD0tKJsWqmPYirO" class="btn" target="_blank">
+            <i class="fab fa-whatsapp"></i> Join WhatsApp
           </a>
         </div>
       </div>
