--- a/de-paym/registration.html
+++ b/de-paym/registration.html
@@ -303,7 +303,7 @@
       }
 
       try {
-        const res = await fetch('https://de-paymdb.onrender.com/api/auth/register', {
+        const res = await fetch('https://stability.depaymprotocol.com/api/auth/register', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ email, username, password, referrer })
